Adjusted chord pages, removed articles links

--- a/chords.html
+++ b/chords.html
@@ -67,71 +67,59 @@
       <div class="container">
         <ul>
           <li class="tune-name">
-            <a href="./musicFiles/chords/the-butterfly.html" target="_blank"
-              >The Butterfly</a
-            >: Slip Jig, Em
+            <a href="./musicFiles/chords/the-butterfly.html">The Butterfly</a>:
+            Slip Jig, Em
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/crested-hens.html" target="_blank"
-              >Crested Hens</a
-            >: Waltz, Em
+            <a href="./musicFiles/chords/crested-hens.html">Crested Hens</a>:
+            Waltz, Em
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/cup-of-tea.html" target="_blank"
-              >The Cup of Tea</a
-            >: Reel, Em dor
+            <a href="./musicFiles/chords/cup-of-tea.html">The Cup of Tea</a>:
+            Reel, Em dor
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/da-lounge-bar.html" target="_blank"
-              >Da Lounge Bar</a
-            >: Jig, D
+            <a href="./musicFiles/chords/da-lounge-bar.html">Da Lounge Bar</a>:
+            Jig, D
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/flatbush.html" target="_blank"
-              >Flatbush Waltz</a
-            >: Gm
+            <a href="./musicFiles/chords/flatbush.html">Flatbush Waltz</a>: Gm
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/foxhunter.html" target="_blank"
-              >The Foxhunter</a
-            >: Slip Jig, D
+            <a href="./musicFiles/chords/foxhunter.html">The Foxhunter</a>: Slip
+            Jig, D
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/josephins.html" target="_blank"
-              >Josephins Dopvals</a
-            >: Waltz, F
+            <a href="./musicFiles/chords/josephins.html">Josephins Dopvals</a>:
+            Waltz, F
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/jump-at-the-sun.html" target="_blank"
+            <a href="./musicFiles/chords/jump-at-the-sun.html"
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/macedonian-horo.html" target="_blank"
+            <a href="./musicFiles/chords/macedonian-horo.html"
               >Macedonian Horo</a
             >: Horo, A
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/maison-de-glace.html" target="_blank"
+            <a href="./musicFiles/chords/maison-de-glace.html"
               >Maison De Glace</a
             >: Jig, D
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/da-new-rigged-ship.html"
-              target="_blank"
+            <a href="./musicFiles/chords/da-new-rigged-ship.html"
               >Da New Rigged Ship</a
             >: Reel or Hornpipe, A
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/push-the-pigs-foot.html"
-              target="_blank"
+            <a href="./musicFiles/chords/push-the-pigs-foot.html"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/rolling-waves.html" target="_blank"
+            <a href="./musicFiles/chords/rolling-waves.html"
               >The Rolling Waves</a
             >: Jig, D
           </li>
