--- a/musicFiles/chords/josephins.html
+++ b/musicFiles/chords/josephins.html
@@ -58,13 +58,18 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This is the original key, though I've mostly heard in transposed to the
-        key of G in sessions. On guitar, I'd suggest a capo on the 3rd fret if
+        F is the original key, though I've mostly heard in transposed to the key
+        of G in sessions. On guitar, I'd suggest a capo on the 3rd fret if
         you're playing in F, so a D shape will be F. Otherwise you'll get tired
         of barring chords, plus you won't get to play with as many open strings.
-        It's pretty straight-forward to transpose up to G, which suits an open
-        position - just go up one step for each chord.
       </p>
+    </div>
+    <div class="sheetMusicContainer">
+      <img
+        class="img-tune"
+        src="../.././musicFiles/chords/chord-page/josephins2-chords.jpg"
+        alt="Sheet music"
+      />
     </div>
     <div class="sheetMusicContainer">
       <img
