--- a/sessionClass.html
+++ b/sessionClass.html
@@ -100,7 +100,7 @@
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">Let's try to make it through the repertoire!</p>
+        <p class="tune-name">No class on July 10th</p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
