--- a/musicFiles/chords/rolling-waves.html
+++ b/musicFiles/chords/rolling-waves.html
@@ -40,9 +40,9 @@
         <li class="nav-item">
           <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-name" href="../.././chords.html">Chords</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
