Added a few more chord charts

--- a/chords.html
+++ b/chords.html
@@ -67,6 +67,11 @@
       <div class="container">
         <ul>
           <li class="tune-name">
+            <a href="./musicFiles/chords/angeline-the-baker.html"
+              >Angeline the Baker</a
+            >: Reel, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/the-butterfly.html">The Butterfly</a>:
             Slip Jig, Em
           </li>
@@ -99,6 +104,11 @@
             >: Jig, Gm
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/little-beggarman.html"
+              >The Little Beggarman</a
+            >: Hornpipe, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/macedonian-horo.html"
               >Macedonian Horo</a
             >: Horo, A
@@ -121,6 +131,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/rolling-waves.html"
               >The Rolling Waves</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/tripping-up-the-stairs.html"
+              >Tripping Up The Stairs</a
             >: Jig, D
           </li>
         </ul>
