Added new chord charts, updated session class tunes of the week

--- a/chords.html
+++ b/chords.html
@@ -67,13 +67,34 @@
       <div class="container">
         <ul>
           <li class="tune-name">
+            <a href="./musicFiles/chords/adventspolksa.html">Adeventspolksa</a>
+            : Polska, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/angeline-the-baker.html"
               >Angeline the Baker</a
             >: Reel, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/ballydesmond.html"
+              >The Ballydesmond (#2)</a
+            >: Polka, Am dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/bjornlaten.html">Björnlåten</a>:
+            Polska, G
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/britches-full-of-stitches.html"
+              >Britches Full Of Stitches</a
+            >: Polka, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/the-butterfly.html">The Butterfly</a>:
             Slip Jig, Em
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/catharsis.html">Catharsis</a>: Reel, Gm
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/crested-hens.html">Crested Hens</a>:
@@ -84,8 +105,19 @@
             Reel, Em dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/drowsy-maggie.html">Drowsy Maggie</a>:
+            Reel, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/itzikel.html">Itzikel</a>: Frailach, Em
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/da-lounge-bar.html">Da Lounge Bar</a>:
             Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/finnish-polka.html">The Finnish</a>:
+            Polka, Bm dor
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/flatbush.html">Flatbush Waltz</a>: Gm
@@ -124,9 +156,17 @@
             >: Reel or Hornpipe, A
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/nigun-atik.html">Nigun Atik</a>: E
+            Freygish
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/push-the-pigs-foot.html"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/rakish-paddy.html">Rakish Paddy</a>:
+            Reel, D mix
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/rolling-waves.html"
@@ -134,9 +174,18 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/swallowtail.html">The Swallowtail</a>:
+            Jig, Em dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
               >Tripping Up The Stairs</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/vals-efter-lasse-i-lyby.html"
+              >Vals Efter Lasse I Lyby</a
+            >: Waltz, Am
           </li>
         </ul>
       </div>
