--- a/musicFiles/chords/bjornlaten.html
+++ b/musicFiles/chords/bjornlaten.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Butterfly</title>
+    <title>Björnlåten</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,21 +58,39 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
-        <br />
-        G and Em <br />
-        Em and C <br />
-        C and Am <br />
-        D and Bm
+        The second chart is for the link provided below, though the first
+        version will probably be more common. This interpretation is a bit more
+        modern, whereas I'd say a more traditional take would involve a drone on
+        E would work well in the place of the first chart, and C# for the
+        second. Otherwise just take your cue from the last note of the melody -
+        that will be your drone.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/the-butterfly-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/bjorlaten-chords.jpg"
         alt="Sheet music"
       />
+    </div>
+    <div class="sheetMusicContainer">
+      <img
+        class="img-tune"
+        src="../.././musicFiles/chords/chord-page/bjorlaten2-chords.jpg"
+        alt="Sheet music"
+      />
+    </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/12AbnyXWVBGDtsej2iVPIn?utm_source=generator"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
     </div>
   </body>
 </html>
