--- a/musicFiles/chords/drowsy-maggie.html
+++ b/musicFiles/chords/drowsy-maggie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Butterfly</title>
+    <title>Drowsy Maggie</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,19 +58,18 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
+        This is the basic outline that follows the melody as I've heard it most
+        commonly played. Common substitions include:
         <br />
         G and Em <br />
         Em and C <br />
-        C and Am <br />
         D and Bm
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/the-butterfly-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/drowsy-maggie-chords.jpg"
         alt="Sheet music"
       />
     </div>
