--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,15 +92,17 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/20" target="_blank"
-            >The Cup Of Tea</a
+          <a
+            href="https://dev.session.nz/tunes-archive/finnish-polka/"
+            target="_blank"
+            >The Finnish Polka</a
           >,
-          <a href="https://thesession.org/tunes/88" target="_blank"
-            >The Rolling Waves</a
+          <a href="https://thesession.org/tunes/238" target="_blank"
+            >The Ballydesmond Polka (#2)</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">No class on July 10th</p>
+        <p class="tune-name">TBD</p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
