--- a/musicFiles/chords/adventspolksa.html
+++ b/musicFiles/chords/adventspolksa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Butterfly</title>
+    <title>Adventspolska</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,21 +58,37 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
-        <br />
-        G and Em <br />
-        Em and C <br />
-        C and Am <br />
-        D and Bm
+        C is the original key, though G will probably be more common. The
+        accompaniment is played on an electric viola tuned down an octave that
+        often drones on the tonic (I), so it will have to be adapted for any
+        other instrument, though this chart should provide a good outline.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/the-butterfly-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/adventspolska-chords.jpg"
         alt="Sheet music"
       />
+    </div>
+    <div class="sheetMusicContainer">
+      <img
+        class="img-tune"
+        src="../.././musicFiles/chords/chord-page/adventspolska2-chords.jpg"
+        alt="Sheet music"
+      />
+    </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/2fSRnIDXIaEZZb3FJughO4?utm_source=generator"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
     </div>
   </body>
 </html>
