--- a/musicFiles/chords/catharsis.html
+++ b/musicFiles/chords/catharsis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Butterfly</title>
+    <title>Catharsis</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,19 +58,14 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
-        <br />
-        G and Em <br />
-        Em and C <br />
-        C and Am <br />
-        D and Bm
+        This is a basic outline that follows the melody and is up for
+        interpretation.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/the-butterfly-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/catharsis-chords.jpg"
         alt="Sheet music"
       />
     </div>
