Added slangpolska to the site

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -99,6 +99,10 @@
           >,
           <a href="https://thesession.org/tunes/238" target="_blank"
             >The Ballydesmond Polka (#2)</a
+          >,
+
+          <a href="./Tunes/jag-ska-lärä-dig-slängpolska.html" target="_blank"
+            >Jag Ska Lärä Dig / Slängpolska</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
