Added chords to newest polska

--- a/chords.html
+++ b/chords.html
@@ -131,6 +131,11 @@
             Waltz, F
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/jag-ska-lärä-dig-slängpolska.html"
+              >Jag Ska Lärä Dig / Slängpolska</a
+            >: Polska, Dm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/jump-at-the-sun.html"
               >Jump At The Sun</a
             >: Jig, Gm
