Addend new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -101,12 +101,16 @@
             >The Ballydesmond Polka (#2)</a
           >,
 
-          <a href="./Tunes/jag-ska-lärä-dig-slängpolska.html" target="_blank"
+          <a href="./Tunes/jag-ska-lärä-dig-slängpolska.html"
             >Jag Ska Lärä Dig / Slängpolska</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">TBD</p>
+        <p class="tune-name">
+          <a href="./Tunes/humours-of-ballyloughlin.html"
+            >The Humours Of Ballyloughlin</a
+          >
+        </p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
@@ -194,6 +198,11 @@
             <a href="https://thesession.org/tunes/562" target="_blank"
               >Crested Hens</a
             >: Waltz, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/20" target="_blank"
+              >The Cup Of Tea</a
+            >: Reel, Em dor / D
           </li>
           <li class="tune-name">
             <a
@@ -339,6 +348,11 @@
               target="_blank"
               >The Rights Of Man</a
             >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/88" target="_blank"
+              >The Rolling Waves</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a
