--- a/Tunes/humours-of-ballyloughlin.html
+++ b/Tunes/humours-of-ballyloughlin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jag Ska Lärä Dig / Slängpolska</title>
-    <link rel="stylesheet" href="../.././styles/styles.css" />
+    <title>The Humours Of Ballyloughlin</title>
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="../.././index.html">Whangarei Tunes</a>
+          <a href="../index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../.././tunes.html">Tunes</a>
+          <a class="nav-name" href="../tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../.././sessionClass.html">Session Class</a>
+                <a href="../sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../.././fridayTunes.html">Friday Tunes</a>
+                <a href="../fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../.././resources.html">Resources</a>
+          <a class="nav-name" href="../resources.html">Resources</a>
         </li>
         <!-- <li class="nav-item">
-          <a class="nav-name" href="../.././articles.html">Articles</a>
+          <a class="nav-name" href="../articles.html">Articles</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-name" href="../.././chords.html">Chords</a>
+          <a class="nav-name" href="../chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../.././images/facebook.png"
+              src="../images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -58,23 +58,23 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This was originally in the key of Cm (see link below), but Dm is
-        probably a bit more reasonable for most folks. Be aware of the accents
-        in unusual places! It will help to be really familiar with where the
-        melody is going.
+        This modal 4-part jig is a great tune for anyone looking to expand their
+        repertoire beyond the typical session tunes. As any older trad tune,
+        there will be many variations. This particular transcription is based on
+        the version below by Matt Malloy.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/jag-ska-lärä-dig-slängpolska-chords.jpg"
+        src="../musicFiles/humous-of-ballyloughlin.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/3WbRQGYGOiP5zrSaun6VXv?utm_source=generator"
+        src="https://open.spotify.com/embed/track/0r2TAzNTWC1vRomTijhpc4?utm_source=generator"
         width="100%"
         height="352"
         frameborder="0"
