Added chords for jig

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -116,9 +116,7 @@
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
           <li class="tune-name">
-            <a href="./Tunes/adventspolska.html" target="_blank"
-              >Adventspolska</a
-            >: Polksa, G
+            <a href="./Tunes/adventspolska.html">Adventspolska</a>: Polksa, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/14300" target="_blank"
@@ -155,8 +153,7 @@
             >: Jig, G
           </li> -->
           <li class="tune-name">
-            <a href="./Tunes/björnlåten.html" target="_blank">Björnlåten</a>:
-            Polska, G
+            <a href="./Tunes/björnlåten.html">Björnlåten</a>: Polska, G
           </li>
           <li class="tune-name">
             <a
@@ -263,9 +260,7 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
-            <a href="./Tunes/jump-at-the-sun.html" target="_blank"
-              >Jump At The Sun</a
-            >: Jig, Gm
+            <a href="./Tunes/jump-at-the-sun.html">Jump At The Sun</a>: Jig, Gm
           </li>
           <li class="tune-name">
             <a
@@ -292,9 +287,7 @@
             >: Jig, D
           </li>
           <li class="tune-name">
-            <a href="./Tunes/macedonian-horo.html" target="_blank"
-              >Macedonian Horo</a
-            >: Horo, A
+            <a href="./Tunes/macedonian-horo.html">Macedonian Horo</a>: Horo, A
           </li>
           <li class="tune-name">
             <a
