Added link to chord page

--- a/chords.html
+++ b/chords.html
@@ -127,6 +127,11 @@
             Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/humours-of-ballyloughlin.html"
+              >Humours Of Ballyloughlin</a
+            >: Jig, D mix
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/josephins.html">Josephins Dopvals</a>:
             Waltz, F
           </li>
