Updated new tunes

--- a/Tunes/humours-of-ballyloughlin.html
+++ b/Tunes/humours-of-ballyloughlin.html
@@ -61,7 +61,7 @@
         This modal 4-part jig is a great tune for anyone looking to expand their
         repertoire beyond the typical session tunes. As any older trad tune,
         there will be many variations. This particular transcription is based on
-        the version below by Matt Malloy.
+        the version below by Matt Molloy.
       </p>
     </div>
     <div class="sheetMusicContainer">
