--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,24 +92,14 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a
-            href="https://dev.session.nz/tunes-archive/finnish-polka/"
-            target="_blank"
-            >The Finnish Polka</a
-          >,
-          <a href="https://thesession.org/tunes/238" target="_blank"
-            >The Ballydesmond Polka (#2)</a
-          >,
-
-          <a href="./Tunes/jag-ska-lärä-dig-slängpolska.html"
-            >Jag Ska Lärä Dig / Slängpolska</a
+          <a href="./Tunes/humours-of-ballyloughlin.html"
+            >The Humours Of Ballyloughlin</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/humours-of-ballyloughlin.html"
-            >The Humours Of Ballyloughlin</a
-          >
+          <a href="https://thesession.org/tunes/273">The Castle</a>,
+          <a href="https://thesession.org/tunes/221">The Earl's Chair</a>
         </p>
       </div>
       <div>
@@ -132,6 +122,11 @@
             <a href="https://thesession.org/tunes/4997" target="_blank"
               >Ashokan Farewell</a
             >: Waltz, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/238" target="_blank"
+              >The Ballydesmond Polka (#2)</a
+            >: Polka, Am
           </li>
           <li class="tune-name">
             <a
@@ -215,6 +210,13 @@
           </li>
           <li class="tune-name">
             <a
+              href="https://dev.session.nz/tunes-archive/finnish-polka/"
+              target="_blank"
+              >The Finnish</a
+            >: Polka, Bm
+          </li>
+          <li class="tune-name">
+            <a
               href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
               target="_blank"
               >Fisher's</a
@@ -251,6 +253,11 @@
             <a href="https://thesession.org/tunes/445" target="_blank"
               >Itzikel</a
             >: Frailach, Em
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/jag-ska-lärä-dig-slängpolska.html"
+              >Jag Ska Lärä Dig / Slängpolska</a
+            >: Polksa, Dm
           </li>
           <li class="tune-name">
             <a
