Added chord charts for new tunes

--- a/chords.html
+++ b/chords.html
@@ -94,6 +94,10 @@
             Slip Jig, Em
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/the-castle.html">The Castle</a>: Jig,
+            Am
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/catharsis.html">Catharsis</a>: Reel, Gm
           </li>
           <li class="tune-name">
@@ -107,6 +111,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/drowsy-maggie.html">Drowsy Maggie</a>:
             Reel, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/earls-chair.html">The Earl's Chair</a>:
+            Reel, D
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/itzikel.html">Itzikel</a>: Frailach, Em
