--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,14 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/humours-of-ballyloughlin.html"
-            >The Humours Of Ballyloughlin</a
-          >
+          <a href="https://thesession.org/tunes/273">The Castle</a>,
+          <a href="https://thesession.org/tunes/221">The Earl's Chair</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/273">The Castle</a>,
-          <a href="https://thesession.org/tunes/221">The Earl's Chair</a>
+          <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>
         </p>
       </div>
       <div>
