Added new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,12 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/273">The Castle</a>,
-          <a href="https://thesession.org/tunes/221">The Earl's Chair</a>
+          <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>
+          <a href="https://thesession.org/tunes/250"
+            >The Road To Lisdoonvarna</a
+          >
         </p>
       </div>
       <div>
@@ -175,6 +176,11 @@
             >: Slip jig, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/273" target="_blank"
+              >The Castle</a
+            >: Jig, Am
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/703" target="_blank"
               >Catharsis</a
             >: Reel, Gm
@@ -205,6 +211,11 @@
             <a href="https://thesession.org/tunes/654" target="_blank"
               >The Fermanagh</a
             >: Highland, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/221" target="_blank"
+              >The Earl's Chair</a
+            >: Reel, D
           </li>
           <li class="tune-name">
             <a
@@ -246,6 +257,11 @@
             <a href="https://thesession.org/tunes/49" target="_blank"
               >The Harvest Home</a
             >: Hornpipe, D
+          </li>
+          <li class="tune-name">
+            <a href="Tunes/humours-of-ballyloughlin.html"
+              >The Humours Of Ballyloughlin</a
+            >: Jig, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/445" target="_blank"
