Added chord chart for tune of the week

--- a/chords.html
+++ b/chords.html
@@ -187,6 +187,11 @@
             Reel, D mix
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/road-to-lisdoonvarna.html"
+              >The Road To Lisdoonvarna</a
+            >: Slide, Em dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/rolling-waves.html"
               >The Rolling Waves</a
             >: Jig, D
