--- a/sessionClass.html
+++ b/sessionClass.html
@@ -96,9 +96,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/250"
-            >The Road To Lisdoonvarna</a
-          >
+          <a href="https://thesession.org/tunes/250">The Road To Lisdoonvarna</a
+          >, How to build a set
         </p>
       </div>
       <div>
