Added new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -90,14 +90,15 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content sub-heading">Tunes of the week:</h3>
+        <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>
+          <a href="https://thesession.org/tunes/250"
+            >The Road To Lisdoonvarna</a
+          >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/250">The Road To Lisdoonvarna</a
-          >, How to build a set
+          <a href="https://thesession.org/tunes/857">Spootiskerry</a>
         </p>
       </div>
       <div>
@@ -195,9 +196,8 @@
             >: Waltz, Em dor
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/20" target="_blank"
-              >The Cup Of Tea</a
-            >: Reel, Em dor / D
+            <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>: Hornpipe,
+            D
           </li>
           <li class="tune-name">
             <a
