Added another tune of the week and chords, made adjustments to titles

--- a/musicFiles/chords/farewell-to-whalley-range.html
+++ b/musicFiles/chords/farewell-to-whalley-range.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spootiskerry</title>
+    <title>Farewell To Whalley Range</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../../tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
@@ -58,17 +58,16 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        One could reasonably play most of this tune just hanging out on a G
-        chord, though I would keep the D chord in the B section. Logically it
-        makes sense to play that D on the 3rd beat vs the 1st, but it sounds
-        good either way to my ears. Em, G and C are all pretty interchangeable
-        throughout, so experiment and find something that suits.
+        This is based on versions that feature the composer, though I added the
+        optional A chord as it fits in nicely. I came up with an optional B
+        section as it follows a bit closer to the chords and still sounds quite
+        nice, though I've never heard anyone actually play it like this.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/spootiskerry-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/farewell-to-whalley-range.jpg"
         alt="Sheet music"
       />
     </div>
