--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,6 +98,9 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
+          <a href="https://thesession.org/tunes/2410"
+            >Farewell To Whalley Range</a
+          >,
           <a href="https://thesession.org/tunes/857">Spootiskerry</a>
         </p>
       </div>
