Updates and links to new chord pages

--- a/chords.html
+++ b/chords.html
@@ -124,6 +124,11 @@
             Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/farewell-to-whalley-range.html"
+              >Farewell to Whalley Range</a
+            >: >: Slip Jig, F#m dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/finnish-polka.html">The Finnish</a>:
             Polka, Bm dor
           </li>
@@ -195,6 +200,10 @@
             <a href="./musicFiles/chords/rolling-waves.html"
               >The Rolling Waves</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
+            Reel, G
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/swallowtail.html">The Swallowtail</a>:
