--- a/musicFiles/chords/farewell-to-whalley-range.html
+++ b/musicFiles/chords/farewell-to-whalley-range.html
@@ -58,10 +58,9 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This is based on versions that feature the composer, though I added the
-        optional A chord as it fits in nicely. I came up with an optional B
-        section as it follows a bit closer to the chords and still sounds quite
-        nice, though I've never heard anyone actually play it like this.
+        This is based on several versions that feature the composer, though I
+        added the optional A chord as it fits in nicely. I also included a
+        option based on the original recording.
       </p>
     </div>
     <div class="sheetMusicContainer">
