Added new tune of the week plus chords

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,16 +92,16 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/250"
-            >The Road To Lisdoonvarna</a
-          >
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="https://thesession.org/tunes/2410"
             >Farewell To Whalley Range</a
           >,
           <a href="https://thesession.org/tunes/857">Spootiskerry</a>
+        </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="./Tunes/marche-du-queteux-pomerleau.html"
+            >Marche du quêteux Pomerleau</a
+          >
         </p>
       </div>
       <div>
@@ -364,6 +364,11 @@
               target="_blank"
               >The Rights Of Man</a
             >: Hornpipe, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/250" target="_blank"
+              >The Road To Lisdoonvarna</a
+            >: Slide, Em dor
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/88" target="_blank"
