--- a/chords.html
+++ b/chords.html
@@ -174,6 +174,12 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a
+              href="./musicFiles/chords/marche-du-queteux-pomerleau-chords.html"
+              >Marche du quêteux Pomerleau</a
+            >: March, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/da-new-rigged-ship.html"
               >Da New Rigged Ship</a
             >: Reel or Hornpipe, A
