Added another tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -70,9 +70,9 @@
           <p>
             The Monday Session Classes are welcome to all ability levels. This
             is a great opportunity where folks can participate in a group
-            setting and build up their repertoire. We begin at 3:30pm and spend
-            the first hour or so learning new tunes, technique and more. The
-            second portion (5-6pm) is spent reviewing all of the tunes we know
+            setting and build up their repertoire. We begin at 4pm and spend the
+            first hour or so learning new tunes, technique and more. The second
+            portion (5-6pm) is spent reviewing all of the tunes we know
             together. This is the closest thing to a public session that happens
             in the community at the moment. Drop in to either whenever it suits.
           </p>
@@ -101,7 +101,7 @@
         <p class="tune-name">
           <a href="./Tunes/marche-du-queteux-pomerleau.html"
             >Marche du quêteux Pomerleau</a
-          >
+          >, <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>
         </p>
       </div>
       <div>
