Added new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,16 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/2410"
-            >Farewell To Whalley Range</a
-          >,
-          <a href="https://thesession.org/tunes/857">Spootiskerry</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="./Tunes/marche-du-queteux-pomerleau.html"
             >Marche du quêteux Pomerleau</a
           >, <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>
+        </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="./Tunes/marche-du-queteux-pomerleau.html">Soggy's</a>
         </p>
       </div>
       <div>
@@ -218,6 +215,11 @@
             <a href="https://thesession.org/tunes/221" target="_blank"
               >The Earl's Chair</a
             >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/2410" target="_blank"
+              >Farewell To Whalley Range</a
+            >: Slip jig, F#m
           </li>
           <li class="tune-name">
             <a
@@ -398,6 +400,11 @@
               target="_blank"
               >Sonny's Mazurka</a
             >: Mazurka, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/857" target="_blank"
+              >Spootiskerry</a
+            >: Reel, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/601" target="_blank"
