Updated link to display correct upcoming tune

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,7 +98,7 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/marche-du-queteux-pomerleau.html">Soggy's</a>
+          <a href="https://thesession.org/tunes/9196">Soggy's</a>
         </p>
       </div>
       <div>
