Added chord page for Soggy's

--- a/chords.html
+++ b/chords.html
@@ -212,6 +212,9 @@
             Reel, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/soggys.html">Soggy's</a>: Slip jig, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/swallowtail.html">The Swallowtail</a>:
             Jig, Em dor
           </li>
