Added another tune of the week and chords

--- a/chords.html
+++ b/chords.html
@@ -180,6 +180,11 @@
             >: March, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/musical-priest.html"
+              >The Musical Priest</a
+            >: Reel, Bm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/da-new-rigged-ship.html"
               >Da New Rigged Ship</a
             >: Reel or Hornpipe, A
