--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,7 +98,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/9196">Soggy's</a>
+          <a href="https://thesession.org/tunes/9196">Soggy's</a>,
+          <a href="https://thesession.org/tunes/73">The Musical Priest</a>
         </p>
       </div>
       <div>
